# CCTV-4-Mac

./: .gitignore  NOTICE.md  README.md  pyproject.toml
CCTV/: .env.sample  export_model.py  main_monitor.py  main_monitor_discord.py
