[project]
name = "cctv"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SamuraiHumanGo_Mac", email = "gotechsamurai@samurai-human-go.com" }
]
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.203",
    "opencv-python>=4.12.0.88",
    "coremltools>=8.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cctv"]
